# user_agent

./: .bumpversion.cfg  .flake8  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  example.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  test.py  tox.ini
.github/workflows/: check.yml  mypy.yml  test.yml  tox.yml
docs/: Makefile
docs/source/: conf.py  index.rst
script/: README.rst  arena.py  demo.py  dump_devices.py  grep.py  mobile247.py
test/: config.py  config_file.py  release.py  user_agent.py  warning.py
test/data/: unique_configuration.json  wrong_format_configuration.json
tests/: test_user_agent.py  test_warning.py
user_agent/: __init__.py  base.py  cli.py  configuration.py  device.py  error.py  misc.py  warning.py
user_agent/data/: smartphone_dev_ext.json  smartphone_dev_id.json  tablet_dev_ext.json  tablet_dev_id.json
